   * Major internal refactoring done.
 * AI:
   * New Micro AI: Fast AI
   * Messenger Escort Micro AI: new optional parameters [filter],
     [filter_second] and invert_order=
   * Coward Micro AI: new optional key attack_if_trapped=
   * Stationed Guardian Micro AI: make guard_x/y= optional keys
   * Messenger Escort Micro AI: bug fix for escort units blocking messenger's
     progress
   * Several Micro AIs: fix a variety of rarely occurring but serious bugs, such
     as invalid savegames or disabling the AI from working for the rest of the
     turn or after changing the Micro AI settings.
   * Bug fix for requiring unnecessary keys for removal of several Micro AIs
   * Fixed a bug that made it impossible to change or delete Micro AIs after a
     game had been reloaded (bug #21750). This was a general bug in the RCA AI
     mechanism and applied to other CAs as well, but it was most visible in the
     Micro AIs.
   * Some internal reorganization of Micro AI code to facilitate customizing
     them for UMC and adding functionality from other versions of Wesnoth. Some
     code cleanup for consistency, readability and speed, as well as fixing of
     some minor and subtle bugs.
   * Fix bug in Random Recruit Micro AI: the AI can now handle custom castle
     terrain independent of its terrain code
   * Fix bug in Return Guardian and Goto Micro AIs when there is no path to
     the goal hex
   * Several fixes of translatable strings in Micro AIs
 * Campaigns:
   * Changed all occurrences of {FLAG_VARIANT ragged} to {FLAG_VARIANT6 ragged}
   * Singleplayer campaign creation now utilizes the create, configure,
     and connect engines from the multiplayer codepath.
   * Eras, mods, and options are now available for sp campaigns.
   * Fix sighted events firing too early in several scenarios. Fixes bug #22466
   * Descent into Darkness:
     * Fixed various issues with player and enemy gold and income in
       'Descent into Darkness'.