@@ -14,6 +14,7 @@ Version 1.13.0-dev:
    * Stationed Guardian Micro AI: make guard_x/y= optional keys
    * Messenger Escort Micro AI: bug fix for escort units blocking messenger's
      progress
+   * Lurkers Micro AI: fix bug in wander terrain selection
    * Several Micro AIs: fix a variety of rarely occurring but serious bugs, such
      as invalid savegames or disabling the AI from working for the rest of the
      turn or after changing the Micro AI settings.
